form handler || design variant

--- a/buffer/marketing-aumbre.webflow.io/index.html
+++ b/buffer/marketing-aumbre.webflow.io/index.html
@@ -58,7 +58,7 @@
 							<div class="free-guide-header-component">
 								<div id="w-node-_58400665-61fa-22e3-71bf-adb8259c89a6-a087c54b" class="header-content-wrapper">
 									<div class="margin-top margin-small">
-										<h1 class="heading-large">Discover how online store can help you <span class="text-span">GROW</span>
+										<h1 class="heading-large">Discover how good design can help you <span class="text-span">GROW</span>
 										</h1>
 									</div>
 									<div class="margin-top margin-medium">
