--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
 <html data-wf-domain="marketing-aumbre.webflow.io" data-wf-page="6372959d6cba240aa087c54b" data-wf-site="6372959d6cba24714787c543" data-wf-status="1">
 	<!-- Mirrored from marketing-aumbre.webflow.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 19 Nov 2022 14:22:35 GMT -->
 	<head>
+        <!-- Google tag (gtag.js)
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JW4VRGQ5C5"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-JW4VRGQ5C5');
+        </script> -->
+
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-MR46MZ5');</script>
+            <!-- End Google Tag Manager -->
+
 		<meta charset="utf-8" />
 		<title>Aumbre - Marketing</title>
 		<meta content="Aumbre - Marketing" property="og:title" />
@@ -33,6 +51,12 @@
 		<link href="https://uploads-ssl.webflow.com/6372959d6cba24714787c543/6373748617ff5791faadc98b_webclip_256.png" rel="apple-touch-icon" />
 	</head>
 	<body class="body-2">
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MR46MZ5"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+            <!-- End Google Tag Manager (noscript) -->
+
+
 		<div class="page-wrapper">
 			<div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
 				<div class="page-padding">
