--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html data-wf-domain="marketing-aumbre.webflow.io" data-wf-page="6372959d6cba240aa087c54b" data-wf-site="6372959d6cba24714787c543" data-wf-status="1">
 	<!-- Mirrored from marketing-aumbre.webflow.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 19 Nov 2022 14:22:35 GMT -->
 	<head>
-        <!-- Google tag (gtag.js)
+        <!-- Google tag (gtag.js) ANALYTICS-->
         <script async src="https://www.googletagmanager.com/gtag/js?id=G-JW4VRGQ5C5"></script>
         <script>
         window.dataLayer = window.dataLayer || [];
@@ -12,7 +12,7 @@
         gtag('js', new Date());
 
         gtag('config', 'G-JW4VRGQ5C5');
-        </script> -->
+        </script>
 
         <!-- Google Tag Manager -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
