Number added to site

--- a/index.html
+++ b/index.html
@@ -205,11 +205,14 @@
 				</div>
 				<section class="footer-subscribe wf-section">
 					<div class="footer-form-two w-container">
-						<div class="div-block">
-							<div class="footer-form-title">Have a project in mind?</div>
-							<a href="https://calendly.com/aumbre-studio/30min" target="_blank" class="button-primary footer-form-button w-button">Schedule a call with us</a>
-						</div>
-					</div>
+                        <div class="div-block">
+                            <div class="footer-form-title">Have a project in mind?</div>
+                            <a href="https://calendly.com/aumbre-studio/30min" target="_blank" class="button-primary footer-form-button w-button">Schedule a call with us</a>
+                        </div>
+                        <div class="div-block">
+                            <div class="nav-link"><a href="tel:+917022623764" style="text-decoration: none;" class="link nav-link">Or Call Us :&nbsp;+91 70226 23764</a></div>
+                        </div>
+                    </div>
 					<div class="container-2">
 						<div class="footer-wrapper-three">
 							<div class="footer-block-three">
