--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						</a>
 						<nav role="navigation" class="nav-menu w-nav-menu">
 							<div class="button-wrapper">
-								<a data-w-id="82ab44b9-6eee-59de-003f-e9a65a4cf6b6" href="https://calendly.com/aumbre-studio/30min" target="_blank" class="button is-navbar w-button">Schedule a <span class="text-weight-bold">call</span> with us </a>
+								<a id="nav-call" data-w-id="82ab44b9-6eee-59de-003f-e9a65a4cf6b6" href="https://calendly.com/aumbre-studio/30min" target="_blank" class="button is-navbar w-button">Schedule a <span class="text-weight-bold">call</span> with us</a>
 							</div>
 						</nav>
 						<div class="nav-menu-button w-nav-button">
@@ -91,11 +91,10 @@
 									<div class="margin-top margin-medium">
 										<div class="header-form-block w-form">
 											<form id="email-form" name="email-form" data-name="Email Form" action="https://www.formbackend.com/f/0a830b3d73dfff0b" method="post">
-												<input type="text" class="footer-text-field w-input" maxlength="256" name="Name" data-name="Name" placeholder="Name" id="Name-4" required="" />
-												<input type="email" class="footer-text-field w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="Your email" id="email-2" required="" />
-												<input type="tel" class="footer-text-field w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="Your phone no." id="email-2" />
-												<input type="text" class="footer-text-field w-input" maxlength="256" name="project" data-name="project" placeholder="Tell us a bit about your project" id="project" required="" />
-												<input type="submit" data-wait="Please wait..." value="Connect with us" class="button header-form-submit w-button" />
+												<input type="text" class="footer-text-field w-input" maxlength="256" name="Name" data-name="Name" placeholder="Name" id="Name-4"/>
+												<input type="tel" class="footer-text-field w-input" autofocus="true" maxlength="256" name="email-2" data-name="Email 2" placeholder="Your phone number" id="email-2" required=""/>
+												<input type="email" class="footer-text-field w-input" maxlength="256" name="email-2" data-name="Email 2" placeholder="Your email" id="email-2"/>
+												<input type="submit" id="hero-cta" value="Get Quote" data-wait="Please wait..." class="button header-form-submit w-button"/>
 											</form>
 											<div class="w-form-done">
 												<div>Thank you! Your submission has been received!</div>
@@ -122,7 +121,7 @@
 							<div class="heading-hero">
 								<h1 class="heading-7">Add character to your <strong class="bold-text-2">website</strong>. Grow Traffic to your <span class="text-span-2">store</span>. </h1>
 								<h2 class="heading-2">Customizable native webflow animations.</h2>
-								<a href="https://calendly.com/aumbre-studio/30min" target="_blank" class="cta-hero-2 w-button">Boook a Call With Us</a>
+								<a id="animation-cta" href="https://calendly.com/aumbre-studio/30min" target="_blank" class="cta-hero-2 w-button">Boook a Call With Us</a>
 							</div>
 							<div class="characters-wrapper">
 								<div data-w-id="d8322192-1554-4c53-4c9f-80141f8deb5e" class="character-group">
@@ -207,7 +206,7 @@
 					<div class="footer-form-two w-container">
                         <div class="div-block">
                             <div class="footer-form-title">Have a project in mind?</div>
-                            <a href="https://calendly.com/aumbre-studio/30min" target="_blank" class="button-primary footer-form-button w-button">Schedule a call with us</a>
+                            <a id="footer-cta" href="https://calendly.com/aumbre-studio/30min" target="_blank" class="button-primary footer-form-button w-button">Schedule a call with us</a>
                         </div>
                         <div class="div-block">
                             <div class="nav-link"><a href="tel:+917022623764" style="text-decoration: none;" class="link nav-link">Or Call Us :&nbsp;+91 70226 23764</a></div>
